platform/networking/network-policies/base/allow/ingress/allow-apigateway-from-ingress.yaml
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: allow-apigateway-from-ingress
  namespace: microbank-dev
  annotations:
    argocd.argoproj.io/sync-wave: "7"
spec:
  podSelector:
    matchLabels:
      network-role: gateway

  policyTypes:
  - Ingress

  ingress:
  - from:
    - namespaceSelector:
        matchLabels:
          tier: ingress
    ports:
    - protocol: TCP
      port: 8123
