platform/networking/network-policies/base/allow/ingress/allow-auth-service-from-transaction-service.yaml
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: allow-auth-service-from-transaction-service
  namespace: microbank-dev
  annotations:
    argocd.argoproj.io/sync-wave: "7"
spec:
  podSelector:
    matchLabels:
      network-role: backend
      app.kubernetes.io/name: auth-service

  policyTypes:
  - Ingress

  ingress:
  - from:
    - podSelector:
        matchLabels:
          network-role: backend
          app.kubernetes.io/name: transaction-service
    ports:
    - protocol: TCP
      port: 8081
