platform/networking/network-policies/base/allow/ingress/allow-redis-from-workloads.yaml
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: allow-redis-from-workloads
  namespace: redis
  annotations:
    argocd.argoproj.io/sync-wave: "7"
spec:
  podSelector:
    matchLabels:
      app.kubernetes.io/name: redis

  policyTypes:
  - Ingress

  ingress:
  - from:
    - namespaceSelector:
        matchLabels:
          tier: workloads
      podSelector:
        matchLabels:
          access.redis: "true"
    ports:
    - protocol: TCP
      port: 6379
